# django_academy

./: .env.example  .flake8  .gitignore  README.md  fixture.json  pyproject.toml  requirements.txt  requirments.txt  setup.py  sth.txt
.github/workflows/: django.yml  python-package.yml
about/: tests.py  urls.py  views.py
catalog/: admin.py  apps.py  converters.py  fixture.json  models.py  tests.py  urls.py  validators.py  views.py
catalog/fixtures/: fixture.json
catalog/migrations/: 0001_initial.py  0002_auto_20230219_2127.py  0002_auto_20230222_1234.py  0002_auto_20230222_1644.py  0002_titleimage.py  0003_auto_20230220_1104.py  0003_auto_20230222_1648.py  0003_item_main_image.py  0004_alter_catalogitem_text.py  0004_auto_20230222_1653.py  0004_titleimage_image.py  0005_alter_titleimage_image.py  0005_auto_20230222_1703.py  0006_alter_titleimage_image.py  0006_item_main_image.py  0007_alter_gallery_image.py  0007_gallery.py  0008_alter_gallery_image.py  0008_alter_gallery_options.py  0009_auto_20230227_1351.py  0009_auto_20230228_1008.py  0010_alter_item_text.py  0010_auto_20230228_1318.py  0011_auto_20230228_1712.py  0012_alter_item_main_image.py  0013_item_is_on_main.py  0014_auto_20230307_0800.py  0015_item_image.py  0017_auto_20230307_2314.py  (+8 more)
core/: admin.py  models.py
feedback/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
homepage/: apps.py  tests.py  tests_pytest.py  urls.py  views.py
myserver/: asgi.py  middleware.py  settings.py  urls.py  wsgi.py
templates/: base.html
users/: forms.py  models.py  test_user.py  urls.py  views.py
(+49 files in other folders)
